# docs/swagger.yaml
@@ -39,6 +39,20 @@ definitions:
     - email
     - password
     type: object
+  internal_handlers.WalletOperation:
+    properties:
+      amount:
+        type: number
+      currency:
+        enum:
+        - USD
+        - RUB
+        - EUR
+        type: string
+    required:
+    - amount
+    - currency
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -46,7 +60,32 @@ info:
   title: Currency Wallet API
   version: "1.0"
 paths:
-  /api/v1/balance/{currency}:
+  /balance:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get user total balance for all currencies
+      tags:
+      - wallet
+  /balance/{currency}:
     get:
       parameters:
       - description: Currency code (USD, RUB, EUR)
@@ -77,7 +116,7 @@ paths:
       summary: Get user balance for currency
       tags:
       - wallet
-  /api/v1/exchange:
+  /exchange:
     post:
       consumes:
       - application/json
@@ -119,7 +158,7 @@ paths:
       summary: Exchange currencies
       tags:
       - exchange
-  /api/v1/exchange/rates:
+  /exchange/rates:
     get:
       responses:
         "200":
@@ -138,7 +177,7 @@ paths:
       summary: Get current exchange rates
       tags:
       - exchange
-  /api/v1/login:
+  /login:
     post:
       consumes:
       - application/json
@@ -165,7 +204,7 @@ paths:
       summary: Login and get JWT token
       tags:
       - auth
-  /api/v1/register:
+  /register:
     post:
       consumes:
       - application/json
@@ -181,6 +220,10 @@ paths:
       responses:
         "201":
           description: Created
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: Bad Request
           schema:
@@ -190,6 +233,78 @@ paths:
       summary: Register a new user
       tags:
       - auth
+  /wallet/deposit:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Deposit request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.WalletOperation'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Deposit funds to wallet
+      tags:
+      - wallet
+  /wallet/withdraw:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Withdraw request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.WalletOperation'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Withdraw funds from wallet
+      tags:
+      - wallet
 securityDefinitions:
   ApiKeyAuth:
     in: header
